--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
   base = "client"
   command = "npm run build"
-  publish = "client/build"
+  publish = "frontend/build"
 
 [[redirects]]
   from = "/*"
